@@ -500,6 +500,7 @@ void stopInputRec()
 	inputTracker_ = 0;
 }
 
+
 /* -------------------------------------------------------------------------- */
 
 
